--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/mitchconquer/videocards#readme",
   "dependencies": {
-    "fluent-ffmpeg": "^2.1.0"
+    "chalk": "^1.1.3",
+    "fluent-ffmpeg": "^2.1.0",
+    "subtitles-parser": "0.0.2"
   }
 }
