--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "fluent-ffmpeg": "^2.1.0",
+    "sqlite3": "^3.1.4",
     "subtitles-parser": "0.0.2"
   }
 }
