--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/mitchconquer/videocards#readme",
   "dependencies": {
     "archiver": "^1.1.0",
+    "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "fluent-ffmpeg": "^2.1.0",
     "sqlite3": "^3.1.4",
