--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "fluent-ffmpeg": "^2.1.0",
+    "inquirer": "^1.2.2",
     "sqlite3": "^3.1.4",
     "subtitles-parser": "0.0.2"
   }
