--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "videocards",
-  "version": "1.2.0",
+  "version": "1.1.0",
   "description": "Generate language-learning flashcards from video and subtitle files",
   "preferGlobal": true,
   "main": "index.js",
@@ -17,7 +17,7 @@
     "url": "https://github.com/mitchconquer/videocards/issues"
   },
   "homepage": "https://github.com/mitchconquer/videocards#readme",
-  "bundledDependencies": {
+  "dependencies": {
     "archiver": "^1.1.0",
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
