--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Generate language-learning flashcards from video and subtitle files",
   "preferGlobal": true,
   "main": "index.js",
+  "engines": {
+    "node": ">=6.3.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,5 +28,16 @@
     "inquirer": "^1.2.2",
     "sqlite3": "^3.1.4",
     "subtitles-parser": "0.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^3.18.0",
+    "eslint-plugin-node": "^4.2.1"
+  },
+  "eslintConfig": {
+    "env": {
+      "node": true
+    },
+    "plugins": ["node"],
+    "extends": ["eslint:recommended", "plugin:node/recommended"]
   }
 }
