--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
       "node": true
     },
     "plugins": ["node"],
-    "extends": ["eslint:recommended", "plugin:node/recommended"]
+    "extends": ["eslint:recommended", "plugin:node/recommended"],
+    "rules": {
+      "no-console": 0
+    }
   }
 }
